--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "multicast-dns": "^7.2.5",
     "node-localstorage": "^3.0.5",
     "node-ssh": "^13.2.1",
+    "pinia": "^3.0.3",
     "plist": "^3.1.0",
     "ssh2": "^1.16.0",
     "sudo-prompt": "^9.2.1",
