--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "electron-log": "^5.4.1",
     "electron-updater": "6.6.2",
     "keytar": "^7.9.0",
+    "monet": "^0.9.3",
     "multicast-dns": "^7.2.5",
+    "neverthrow": "^8.2.0",
     "node-localstorage": "^3.0.5",
     "node-ssh": "^13.2.1",
     "pinia": "^3.0.3",
