--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "^24.7.1",
     "@types/ssh2": "^1.15.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.19",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "electron": "^32.1.2",
-    "electron-builder": "^25.1.6",
+    "electron": "^38.2.2",
+    "electron-builder": "26.0.12",
     "electron-osx-sign": "^0.6.0",
     "esbuild": "^0.25.1",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.38",
     "postcss-modules": "^6.0.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "vite": "^6.0.11",
     "vitest": "^3.0.7"
   },
@@ -46,6 +48,9 @@
     "@45drives/houston-common-css": "workspace:*",
     "@45drives/houston-common-lib": "workspace:*",
     "@45drives/houston-common-ui": "workspace:*",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "asar": "^3.2.0",
     "electron-log": "^5.4.1",
     "electron-updater": "6.6.2",
