--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "asar": "^3.2.0",
     "electron-log": "^5.4.1",
     "electron-updater": "6.6.2",
+    "eventsource": "^4.0.0",
     "keytar": "^7.9.0",
     "monet": "^0.9.3",
     "multicast-dns": "^7.2.5",
