--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pinia": "^3.0.3",
     "plist": "^3.1.0",
     "ssh2": "^1.16.0",
+    "ssh2-sftp-client": "^12.0.1",
     "sudo-prompt": "^9.2.1",
     "vue": "^3.3.8",
     "vue-router": "^4.5.1",
