--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "45studio-filesharing-app",
-  "version": "0.1.5",
+  "name": "flow-by-45studio",
+  "version": "0.2.0",
   "description": "Client app allowing users to create/manage collaborator user accounts and send magic links to collaborators allowing them to view/interact/comment on multimedia files for review.",
   "main": "main/src/main/main.js",
   "workspaces": [
