pushing changes to orchestration script to support windows multi=phase build/sign

--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -16,6 +16,10 @@ LINUX_BUILD_CMD="yarn build:linux"
 # Windows build + sign (remote over SSH)
 # --------------------------
 RUN_WINDOWS_BUILD=1
+WIN_PHASE=stage
+# WIN_PHASE options:
+# - stage: build -> upload unsigned, then stop for manual GUI signing
+# - finalize: skip build, fetch signed -> latest.yml
 
 # Build host (where repo already exists and build runs)
 WIN_BUILD_HOST=192.168.207.55
@@ -30,7 +34,14 @@ WIN_BUILD_REMOTE_DIR=studio-share
 WIN_BUILD_MODE=git
 WIN_BUILD_GIT_PULL_CMD="cd studio-share && git pull --ff-only"
 WIN_BUILD_CMD="cd studio-share && yarn install && yarn build:win"
+WIN_BUILD_DIST_DIR="studio-share/dist/"
+# Legacy fallback (not used when WIN_BUILD_DIST_DIR is set):
 WIN_BUILD_EXE_GLOB="studio-share/dist/*-win-*.exe"
+WIN_BUILD_DISABLE_SIGN=1
+# Optional override when WIN_BUILD_DISABLE_SIGN=1 (cmd.exe syntax):
+# WIN_BUILD_NO_SIGN_PREFIX='set CSC_IDENTITY_AUTO_DISCOVERY=false&& set CSC_LINK=&& set CSC_KEY_PASSWORD=&& set WIN_CSC_LINK=&& set WIN_CSC_KEY_PASSWORD=&& set CSC_NAME=&& set WIN_CSC_NAME=&& '
+# Optional override when WIN_BUILD_CMD is not cmd.exe /c:
+# WIN_BUILD_NO_SIGN_PREFIX_POSIX='CSC_IDENTITY_AUTO_DISCOVERY=false CSC_LINK= CSC_KEY_PASSWORD= WIN_CSC_LINK= WIN_CSC_KEY_PASSWORD= CSC_NAME= WIN_CSC_NAME= '
 
 # Optional when WIN_BUILD_MODE=rsync
 WIN_BUILD_PREPARE_CMD=
@@ -43,21 +54,21 @@ WIN_SIGN_PASSWORD=
 
 # POSIX-style path for rsync over SSH on the sign host
 WIN_SIGN_REMOTE_DIR=studio-share-signing
+WIN_SIGN_REMOTE_OS=windows
 # Native Windows path used inside SignTool command
 WIN_SIGN_WIN_DIR='C:\Users\45RD Testing\Downloads\Studio Share Signing'
-
-# Set to 1 when sign command prompts in terminal; script will use ssh -tt
-WIN_SIGN_INTERACTIVE=1
+# Optional explicit mkdir command for sign host:
+# WIN_SIGN_MKDIR_CMD='cmd.exe /c "if not exist \"studio-share-signing\" mkdir \"studio-share-signing\""'
 
 # Placeholders available in WIN_SIGN_CMD:
 # __INPUT_POSIX__  __INPUT_WIN__  __OUTPUT_POSIX__  __OUTPUT_WIN__  __BASENAME__  __VERSION__
+# Used as a printed template in stage mode; script does NOT execute this automatically.
 WIN_SIGN_CMD='SignTool sign /tr http://timestamp.sectigo.com /td sha256 /fd sha256 /n "45 Drives Ltd." "__INPUT_WIN__"'
 
 # Optional overrides (default output is same file as input)
 # WIN_SIGN_OUTPUT_POSIX=
 # WIN_SIGN_OUTPUT_WIN=
-# WIN_SIGN_FETCH_PATH=
-# WIN_SIGN_FETCH_GLOB=
+# WIN_SIGN_FETCH_PATH=studio-share-signing/
 
 # --------------------------
 # mac build chain
