update orchestration flow

--- a/scripts/.env.release.example
+++ b/scripts/.env.release.example
@@ -12,6 +12,6 @@ MAC_BUILD_KIND="universal"
 # Signing machine SSH
 SIGN_HOST="x.x.x.x"
 SIGN_USER="useername"
+SIGN_GIT_PULL_CMD="cd '/Users/username/studio-share' && git pull --ff-only"
 SIGN_KEYCHAIN="/keychain/path"
 SIGN_KEYCHAIN_PASSWORD="xxxxxx"
-
