--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -1,16 +1,19 @@
 # --------------------------
 # General
 # --------------------------
-# Optional: defaults to package.json version
-RELEASE_VERSION=1.0.1
-RELEASE_TAG=v1.0.1
-RELEASE_STAGING_DIR=./builds/release/1.0.1
+# Always derived from package.json version (set by orchestrator).
+RELEASE_VERSION=
+RELEASE_TAG=v__VERSION__
+RELEASE_STAGING_DIR=./builds/release/__VERSION__
+RELEASE_BUILDS_DIR=./release-builds
 
 # --------------------------
 # Linux build (local machine)
 # --------------------------
 RUN_LINUX_BUILD=1
+LINUX_GIT_PULL_CMD="git pull --ff-only"
 LINUX_BUILD_CMD="yarn build:linux"
+LINUX_CLEAN_OUTPUTS=1
 
 # --------------------------
 # Windows build + sign (remote over SSH)
@@ -22,9 +25,9 @@ WIN_PHASE=stage
 # - finalize: skip build, fetch signed -> latest.yml
 
 # Build host (where repo already exists and build runs)
-WIN_BUILD_HOST=192.168.207.55
+WIN_BUILD_HOST=10.20.0.124
 WIN_BUILD_PORT=22
-WIN_BUILD_USER=your_windows_build_user
+WIN_BUILD_USER='45RD Testing'
 WIN_BUILD_PASSWORD=
 WIN_BUILD_REMOTE_DIR=studio-share
 
@@ -46,29 +49,8 @@ WIN_BUILD_DISABLE_SIGN=1
 # Optional when WIN_BUILD_MODE=rsync
 WIN_BUILD_PREPARE_CMD=
 
-# Sign host (where SignTool runs)
-WIN_SIGN_HOST=10.20.0.124
-WIN_SIGN_PORT=22
-WIN_SIGN_USER=your_windows_sign_user
-WIN_SIGN_PASSWORD=
-
-# POSIX-style path for rsync over SSH on the sign host
-WIN_SIGN_REMOTE_DIR=studio-share-signing
-WIN_SIGN_REMOTE_OS=windows
-# Native Windows path used inside SignTool command
+# Manual signing folder on the same Windows build host.
 WIN_SIGN_WIN_DIR='C:\Users\45RD Testing\Downloads\Studio Share Signing'
-# Optional explicit mkdir command for sign host:
-# WIN_SIGN_MKDIR_CMD='cmd.exe /c "if not exist \"studio-share-signing\" mkdir \"studio-share-signing\""'
-
-# Placeholders available in WIN_SIGN_CMD:
-# __INPUT_POSIX__  __INPUT_WIN__  __OUTPUT_POSIX__  __OUTPUT_WIN__  __BASENAME__  __VERSION__
-# Used as a printed template in stage mode; script does NOT execute this automatically.
-WIN_SIGN_CMD='SignTool sign /tr http://timestamp.sectigo.com /td sha256 /fd sha256 /n "45 Drives Ltd." "__INPUT_WIN__"'
-
-# Optional overrides (default output is same file as input)
-# WIN_SIGN_OUTPUT_POSIX=
-# WIN_SIGN_OUTPUT_WIN=
-# WIN_SIGN_FETCH_PATH=studio-share-signing/
 
 # --------------------------
 # mac build chain
@@ -76,24 +58,33 @@ WIN_SIGN_CMD='SignTool sign /tr http://timestamp.sectigo.com /td sha256 /fd sha2
 # --------------------------
 RUN_MAC_BUILD=1
 
-MAC_ARM_HOST=192.168.10.20
+MAC_ARM_HOST=192.168.209.29
 MAC_ARM_PORT=22
-MAC_ARM_USER=arm_builder
+MAC_ARM_USER=45drives
 MAC_ARM_PASSWORD=
-MAC_ARM_REPO_DIR=/Users/arm_builder/studio-share
+MAC_ARM_REPO_DIR=/studio-share
 MAC_BUILD_KIND=universal
 
 # Optional: local file copied to ARM repo before build.
 # Useful when you keep release/sign config locally.
 MAC_RELEASE_ENV_LOCAL=
-MAC_RELEASE_ENV_REMOTE=/Users/arm_builder/studio-share/scripts/.env.release
+MAC_RELEASE_ENV_REMOTE=/studio-share/scripts/.env.release
+MAC_ARM_GIT_PULL_CMD="cd '/studio-share' && git pull --ff-only"
 
-# Intel signing host (where sign-mac-on-intel.sh outputs artifacts)
-MAC_SIGN_HOST=192.168.10.21
-MAC_SIGN_PORT=22
-MAC_SIGN_USER=intel_signer
-MAC_SIGN_PASSWORD=
-MAC_SIGN_OUTPUT_DIR=/Users/intel_signer/signing-output
+# Optional explicit remote command. Supports:
+# - __BUNDLE_TAG__ placeholder
+# - __ENV_FILE__ placeholder (when MAC_RELEASE_ENV_LOCAL is set)
+MAC_REMOTE_CMD="cd '/studio-share' && BUNDLE_TAG_OVERRIDE='__BUNDLE_TAG__' ENV_FILE='__ENV_FILE__' bash /studio-share/scripts/release-mac-build.sh"
+
+# Pull signed artifacts back from ARM host (after release-mac-build.sh syncs them there).
+MAC_FETCH_HOST=192.168.209.29
+MAC_FETCH_PORT=22
+MAC_FETCH_USER=45drives
+MAC_FETCH_PASSWORD=
+MAC_FETCH_DIR=/studio-share/mac-signing-out/__BUNDLE_TAG__/
+
+# Legacy fallback (if you fetch directly from Intel signer instead of ARM):
+# MAC_SIGN_OUTPUT_DIR=/Users/intel_signer/signing-output
 
 # --------------------------
 # GitHub release automation (optional)
@@ -102,5 +93,5 @@ GH_REPO=45Drives/studio-share
 GH_CREATE_DRAFT=1
 GH_UPLOAD_RELEASE=1
 GH_PUBLISH_RELEASE=0
-GH_TITLE=v1.0.1
+GH_TITLE=v__VERSION__
 GH_NOTES=
