adds support for x64 mac build in addition to arm64 and universal

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "release:win:finalize": "RUN_LINUX_BUILD=0 RUN_MAC_BUILD=0 RUN_WINDOWS_BUILD=1 WIN_PHASE=finalize GH_CREATE_DRAFT=0 GH_UPLOAD_RELEASE=0 GH_PUBLISH_RELEASE=0 bash scripts/release/orchestrate-release.sh",
     "test": "vitest run",
     "mac:dir:arm64": "yarn build:common && node scripts/build.js && CSC_IDENTITY_AUTO_DISCOVERY=false SKIP_AFTER_SIGN=1 electron-builder --mac --arm64 --dir",
+    "mac:dir:x64": "yarn build:common && node scripts/build.js && CSC_IDENTITY_AUTO_DISCOVERY=false SKIP_AFTER_SIGN=1 electron-builder --mac --x64 --dir",
     "mac:dir:universal": "yarn build:common && node scripts/build.js && CSC_IDENTITY_AUTO_DISCOVERY=false SKIP_AFTER_SIGN=1 electron-builder --mac --universal --dir"
   },
   "repository": "https://github.com/45Drives/studio-share",
