--- a/scripts/.env.release.example
+++ b/scripts/.env.release.example
@@ -6,7 +6,7 @@ NOTARY_PROFILE="AC_NOTARY"
 SIGN_INBOX="/Users/username/studio-share/"
 SIGN_OUTPUT_DIR="/Users/username/studio-share/mac-signing-out"
 
-# Build mode: arm64 | universal
+# Build mode: arm64 | x64 | universal
 MAC_BUILD_KIND="universal"
 
 # Signing machine SSH
