--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -63,6 +63,7 @@ MAC_ARM_PORT=22
 MAC_ARM_USER=45drives
 MAC_ARM_PASSWORD=
 MAC_ARM_REPO_DIR=/studio-share
+# Build mode: arm64 | x64 | universal
 MAC_BUILD_KIND=universal
 
 # Optional: local file copied to ARM repo before build.
