--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -22,7 +22,7 @@ RUN_WINDOWS_BUILD=1
 WIN_PHASE=stage
 # WIN_PHASE options:
 # - stage: build -> upload unsigned, then stop for manual GUI signing
-# - finalize: skip build, fetch signed -> latest.yml
+# - finalize: skip build, fetch signed exe/blockmap back to release-builds
 
 # Build host (where repo already exists and build runs)
 WIN_BUILD_HOST=10.20.0.124
@@ -63,7 +63,7 @@ MAC_ARM_PORT=22
 MAC_ARM_USER=45drives
 MAC_ARM_PASSWORD=
 MAC_ARM_REPO_DIR=/studio-share
-# Build mode: arm64 | x64 | universal
+# Build mode: arm64 | x64 | universal | both
 MAC_BUILD_KIND=universal
 
 # Optional: local file copied to ARM repo before build.
