--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -83,6 +83,9 @@ MAC_FETCH_PORT=22
 MAC_FETCH_USER=45drives
 MAC_FETCH_PASSWORD=
 MAC_FETCH_DIR=/studio-share/mac-signing-out/__BUNDLE_TAG__/
+# MAC_FETCH_CLEANUP_OLD=1
+# MAC_FETCH_KEEP_COUNT=20
+# MAC_FETCH_CLEANUP_GLOB=mac-*
 
 # Legacy fallback (if you fetch directly from Intel signer instead of ARM):
 # MAC_SIGN_OUTPUT_DIR=/Users/intel_signer/signing-output
