updates orchestrator with some cleanup logic to try and reduce mac filesize

--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -83,6 +83,8 @@ MAC_FETCH_PORT=22
 MAC_FETCH_USER=45drives
 MAC_FETCH_PASSWORD=
 MAC_FETCH_DIR=/studio-share/mac-signing-out/__BUNDLE_TAG__/
+# Clean stale mac artifacts in the fetch directory before each mac build/fetch cycle.
+MAC_FETCH_PRE_CLEAN=1
 # MAC_FETCH_CLEANUP_OLD=1
 # MAC_FETCH_KEEP_COUNT=20
 # MAC_FETCH_CLEANUP_GLOB=mac-*
