fixes mac transfer signed artifacts

--- a/scripts/.env.release.example
+++ b/scripts/.env.release.example
@@ -15,3 +15,7 @@ SIGN_USER="useername"
 SIGN_GIT_PULL_CMD="cd '/Users/username/studio-share' && git pull --ff-only"
 SIGN_KEYCHAIN="/keychain/path"
 SIGN_KEYCHAIN_PASSWORD="xxxxxx"
+
+# Sync signed artifacts from Intel signer back to this (ARM build) host.
+SYNC_SIGNED_BACK_TO_ARM=1
+ARM_SIGNED_OUTPUT_DIR="/Users/username/studio-share/Mac-signed/__BUNDLE_TAG__/"
