--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -77,12 +77,12 @@ MAC_ARM_GIT_PULL_CMD="cd '/studio-share' && git pull --ff-only"
 # - __ENV_FILE__ placeholder (when MAC_RELEASE_ENV_LOCAL is set)
 MAC_REMOTE_CMD="cd '/studio-share' && BUNDLE_TAG_OVERRIDE='__BUNDLE_TAG__' ENV_FILE='__ENV_FILE__' bash /studio-share/scripts/release-mac-build.sh"
 
-# Pull signed artifacts back from ARM host (after release-mac-build.sh syncs them there).
+# Pull signed artifacts back from ARM host (after release-mac-build.sh syncs Intel -> ARM).
 MAC_FETCH_HOST=192.168.209.29
 MAC_FETCH_PORT=22
 MAC_FETCH_USER=45drives
 MAC_FETCH_PASSWORD=
-MAC_FETCH_DIR=/studio-share/mac-signing-out/__BUNDLE_TAG__/
+MAC_FETCH_DIR=/studio-share/Mac-signed/__BUNDLE_TAG__/
 # Clean stale mac artifacts in the fetch directory before each mac build/fetch cycle.
 MAC_FETCH_PRE_CLEAN=1
 # MAC_FETCH_CLEANUP_OLD=1
