modifies build and icon location in project, fixes watermark directory if not exist yet

--- a/scripts/release/.env.orchestrator.example
+++ b/scripts/release/.env.orchestrator.example
@@ -5,7 +5,7 @@
 RELEASE_VERSION=
 RELEASE_TAG=v__VERSION__
 RELEASE_STAGING_DIR=./builds/release/__VERSION__
-RELEASE_BUILDS_DIR=./release-builds
+RELEASE_BUILDS_DIR=./builds/release
 
 # --------------------------
 # Linux build (local machine)
@@ -22,7 +22,7 @@ RUN_WINDOWS_BUILD=1
 WIN_PHASE=stage
 # WIN_PHASE options:
 # - stage: build -> upload unsigned, then stop for manual GUI signing
-# - finalize: skip build, fetch signed exe/blockmap back to release-builds
+# - finalize: skip build, fetch signed exe/blockmap back to builds/release
 
 # Build host (where repo already exists and build runs)
 WIN_BUILD_HOST=10.20.0.124
